# http-message-signatures

./: Changes.rst  Makefile  NOTICE  README.rst  common.mk  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml
docs/: conf.py  index.rst
http_message_signatures/: __init__.py  _algorithms.py  algorithms.py  exceptions.py  resolvers.py  signatures.py  structures.py
http_message_signatures/http_sfv/: __init__.py  boolean.py  byteseq.py  date.py  decimal.py  dictionary.py  display_string.py  integer.py  item.py  list.py  string.py  token.py  types.py  util.py  util_json.py
http_msg_sig/: __init__.py  exceptions.py  resolvers.py  signatures.py  structures.py
test/: test-key-ed25519.pem  test-key-rsa-pss.key  test-key-rsa-pss.pem  test.py
