[project]
name = "http-message-signatures"
description = "An implementation of the IETF HTTP Message Signatures draft standard"
readme = "README.rst"
requires-python = ">=3.8"
license = {text = "Apache Software License"}
authors = [{ name = "Andrey Kislyuk"}, {email = "kislyuk@gmail.com" }]
maintainers = [{ name = "Andrey Kislyuk"}, {email = "kislyuk@gmail.com" }]
dynamic = ["version"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: POSIX",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "cryptography >= 36.0.2",
]

[project.urls]
Homepage = "https://github.com/pyauth/http-message-signatures"

[project.optional-dependencies]
tests = [
    "flake8",
    "coverage",
    "build",
    "wheel",
    "mypy",
    "requests",
    "ruff",
]

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.isort]
profile = "black"

[tool.ruff]
line-length = 120

[lint]
unfixable = ["F401"]
